[package]
name = "q_tasks"
description = "Microscoping task polling for Bevy."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ada-x64/q_task"
version = "0.1.0"
authors = ["<phoenix.mandala@pm.me>"]
edition = "2024"

[dependencies]
bevy_ecs = "0.16"
bevy_tasks = "0.16"
bevy_app = { version = "0.16", optional = true }

[features]
plugin = ['dep:bevy_app']
default = ["plugin"]

[dev-dependencies]
bevy = "0.16"
